--- a/GDGFinder-Starter/app/src/main/res/layout/home_fragment.xml
+++ b/GDGFinder-Starter/app/src/main/res/layout/home_fragment.xml
@@ -1,28 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~ Copyright 2019, The Android Open Source Project
-  ~
-  ~ Licensed under the Apache License, Version 2.0 (the "License");
-  ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
-  ~
-  ~     http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~ Unless required by applicable law or agreed to in writing, software
-  ~ distributed under the License is distributed on an "AS IS" BASIS,
-  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~ See the License for the specific language governing permissions and
-  ~ limitations under the License.
-  -->
-
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.example.android.gdgfinder.home.HomeViewModel" />
 
     </data>
 
-    <ScrollView
+
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+
+
+        <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -32,7 +28,6 @@
             android:clipToPadding="true"
             android:paddingBottom="16dp"
             tools:context=".home.HomeFragment">
-
             <ImageView
                 android:id="@+id/image"
                 android:layout_width="0dp"
@@ -43,17 +38,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/behind" />
-
             <TextView
                 android:id="@+id/title"
+                style="?attr/textAppearanceHeadline5"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="serif-monospace"
                 android:text="@string/about_google_developer_groups"
+                android:textAppearance="@style/TextAppearance.Title"
                 app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                 app:layout_constraintStart_toStartOf="@+id/start_guideline"
                 app:layout_constraintTop_toBottomOf="@id/image" />
-
             <TextView
                 android:id="@+id/intro_text"
                 android:layout_width="0dp"
@@ -63,17 +59,16 @@
                 app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                 app:layout_constraintStart_toStartOf="@+id/start_guideline"
                 app:layout_constraintTop_toBottomOf="@id/title" />
-
             <TextView
                 android:id="@+id/subtitle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="13dp"
                 android:text="@string/gdgs_are"
+                android:textAppearance="@style/TextAppearance.SubTitle"
                 app:layout_constraintEnd_toStartOf="@id/end_guideline"
                 app:layout_constraintStart_toEndOf="@id/start_guideline"
                 app:layout_constraintTop_toBottomOf="@+id/intro_text" />
-
             <TextView
                 android:id="@+id/description"
                 android:layout_width="0dp"
@@ -83,7 +78,6 @@
                 app:layout_constraintEnd_toStartOf="@+id/end_guideline"
                 app:layout_constraintStart_toStartOf="@+id/start_guideline"
                 app:layout_constraintTop_toBottomOf="@id/subtitle" />
-
             <ImageView
                 android:id="@+id/end_image"
                 android:layout_width="0dp"
@@ -96,20 +90,30 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/description"
                 app:srcCompat="@drawable/wtm" />
-
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/start_guideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="16dp" />
-
+                app:layout_constraintGuide_begin="@dimen/spacing_normal" />
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/end_guideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_end="26dp" />
+                app:layout_constraintGuide_end="@dimen/spacing_normal" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            android:onClick="@{()-> viewModel.onFabClicked()}"
+            app:srcCompat = "@drawable/ic_gdg"
+            />
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
 </layout>
